Fix compact thread post not left align

--- a/sass/components/_post-right.scss
+++ b/sass/components/_post-right.scss
@@ -44,6 +44,10 @@
             .post__body {
                 background: transparent !important;
             }
+
+            &.post--compact {
+                padding-left: 1em;
+            }
         }
 
         .post-pre-header__icons-container {
